--- a/Docker/web/default.conf
+++ b/Docker/web/default.conf
@@ -2,7 +2,7 @@ server {
 
     listen 80;
     server_name localhost;
-    root /var/www/Story/src/public;
+    root /var/www/Story/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
