--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,33 +4,44 @@ services:
         image: nginx:1.14.2-alpine
         container_name: "Story_web"
         ports:
-            - "${WEB_PORT}:80"
+            - "${WEB_PORT:-8080}:80"
         depends_on:
             - app
         volumes:
             - ./Docker/web/default.conf:/etc/nginx/conf.d/default.conf
-            - ./:/var/www/Story
+            - ./src/public:/var/www/Story/public
+        networks: 
+            - frontend
 
     app:
         build: 
             context: ./
             dockerfile: ./Docker/Story/Dockerfile
         container_name: "Story_app"
-        ports:
-            - "${APP_SSH_PORT}:22"
         depends_on:
             - db
         volumes:
-            - ./:/var/www/Story
+            - ./src/:/var/www/Story
+            - /var/www/Story/node_modules
+        networks: 
+            - frontend
+            - backend
 
     db:
         image: mariadb:10.3.15
         container_name: "Story_db"
         environment:
-            MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
-            MYSQL_USER: ${DB_USERNAME}
-            MYSQL_PASSWORD: ${DB_PASSWORD}
-            MYSQL_DATABASE: ${DB_DATABASE}
+            MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD-:story}
+            MYSQL_USER: ${DB_USERNAME-:story}
+            MYSQL_PASSWORD: ${DB_PASSWORD-:story}
+            MYSQL_DATABASE: ${DB_DATABASE-:story}
             TZ: "Asia/Tokyo"
         ports:
-            - ${DB_PORT}:3306
+            - ${DB_PORT-:3306}:3306
+        networks: 
+            - backend
+
+networks: 
+    frontend:
+    backend:
+        internal: true
